syntax = "proto3";

package structs;

option go_package = "github.com/LeoReeYang/SimpleDB/proto";


service KV{
    rpc GetValue(KeyRequest) returns (GetResponse){}
}

message KeyRequest {
    string key = 1;
}

message GetResponse {
    string value = 1;
}

